<resources>
    <string name="app_name">Cars List Management</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="car_list">Car List</string>

    <string name="car_name">Car name</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="color">Color</string>
    <string name="year">Year</string>

    <string name="clear_cars">Clear Cars</string>
    <string name="save_car">Save Car</string>

    <string name="car_name_brand">Car Name/Brand</string>
    <string name="car_form">Car Form</string>
    <string name="save">Save</string>
</resources>