<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.CarsActivity"
    android:id="@+id/carsManagementLayout"
>
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            android:theme="@style/AppTheme.Toolbar"
            app:layout_scrollFlags="enterAlways"/>

    </com.google.android.material.appbar.AppBarLayout>

    <!--input text content-->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
        >

            <!--Title-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    android:id="@+id/textMain"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/car_form"
                    android:textColor="@color/graffiti"
                    android:textSize="20sp"
                />
            </LinearLayout>

            <!--Car name-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
            >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/carName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/car_name"
                    android:inputType="text"
                    android:textColor="@color/graffiti"
                    android:textSize="20sp"
                    app:boxStrokeColor="@color/graffiti"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="#333">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputCarName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <!--Car color-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/carColor"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/color"
                    android:inputType="text"
                    android:textColor="#333"
                    android:textSize="20sp"
                    app:boxStrokeColor="#333"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="#333"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputCarColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                    />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <!--Car year-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/carYear"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/year"
                    android:inputType="text"
                    android:textColor="#333"
                    android:textSize="20sp"
                    app:boxStrokeColor="#333"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="#333"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputCarYear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <!--Car price-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/carPrice"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:hint="@string/price"
                    android:inputType="text"
                    android:textColor="#333"
                    android:textSize="20sp"
                    app:boxStrokeColor="#333"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="#333"
                >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputCarPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                    />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:layout_margin="16dp"
                android:layout_gravity="center"
            >
                <Button
                    android:id="@+id/btnSaveData"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/save"
                />
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>